[package]
name = "game-engine"
version = "0.1.0"
authors = ["pandaman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
gl = "0.13.0"
glfw = "0.31.0"
image = "0.22.1"
rand = "0.7.0"
log = "0.4.8"
tobj = { version = "0.1.10", features = ["log"] }

[dev-dependencies]
byte-strings = "0.1.3"
env_logger = "0.6.2"
